<resources>
    <string name="app_name"></string>
    <string name="boton_volver">volver</string>
    <string name="title_activity_menu">MainActivity</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Informes</string>
    <string name="title_notifications">Perfil</string>
    <string name="btnInformeCA">pulsar</string>
    <string name="txtInformesCHF">Realizar Informes de Fallo Cardiaco Congestivo (CHF)</string>
    <string name="txtInformesCV">Realizar Informes COVID - 19</string>
    <string name="txt_temperatura">Seleccione temperatura</string>
    <string name="txt_peso">Seleccione su peso</string>
    <string name="txt_tempDefault">36.5 grados</string>
    <string name="txt_pesoDefault">70 Kg</string>
    <string name="txt_grados">grados</string>
    <string name="txtSat">98 %</string>
    <string name="txt_satText">Seleecione Saturacion</string>
    <string name="btnContinuar"><![CDATA[>>]]></string>
    <string name="txtCabeceraCHF">Datos de Alta para informe de Fallo Cardiaco Congestivo</string>
    <string name="txtCabeceraCOV">Datos de Alta para informe de COVID - 19</string>
    <string name="txt_TensionArterial">Seleccione su tension arterial</string>
    <string name="txt_tDiastolica">Diastolica: 80 mmHg</string>
    <string name="txt_tSistolica">Sitolica: 120 mmHg</string>
    <string name="txt_tMedia">Media: 90 mmHg</string>
    <string name="txtTemp">Temperatura: </string>
    <string name="txtSaturacion">Saturacion: </string>
    <string name="txtPeso">Peso: </string>
    <string name="txtTension">Tension: </string>
    <string name="txtFechaAlta">Fecha de Alta:</string>
    <string name="btnMandar">Mandar</string>
    <string name="resumenInforme">Resumen de los datos enviados</string>
    <string name="altaInforme">Empezar proceso de alta de informes</string>
    <string name="proxInf">Listado de los proximos informes a mandar</string>
    <string name="resumenHome">Mensaje de bienvenida</string>
    <string name="resumenDatosPerfil">Datos del usuario</string>
    <string name="txtTipo">Tipo de Informe</string>
    <string name="txtFechaAltaParrafo">La fecha en la que se mando el informe fue:</string>
    <string name="title_signOut">Salir</string>
    <string name="listaPS">Listado del personal sanitario:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>