<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.informes.InformesFragment"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginBottom="100dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/txtInformes"
            android:textSize="25sp"
            android:layout_marginTop="5dp"
            android:text="@string/altaInforme">
        </TextView>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <TableRow
                android:layout_height="2px"
                android:background="#BDBDBD">
                <TextView
                    android:layout_span="2"
                    android:layout_height="1px"
                    android:layout_width="fill_parent"
                    android:text="">
                </TextView>
            </TableRow>

            <TableRow
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/idtxtCHF"
                    android:layout_width="154dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txtInformesCHF"
                    android:textSize="20sp" />


            </TableRow>
            <TableRow
                android:paddingBottom="5dp">
                <TextView></TextView>
            <Button
                android:id="@+id/btnInformeCA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnInformeCA"/>
            </TableRow>


            <TableRow
                android:layout_height="2px"
                android:background="#BDBDBD">
                <TextView
                    android:layout_span="2"
                    android:layout_height="1px"
                    android:layout_width="fill_parent"
                    android:text="">
                </TextView>
            </TableRow>

            <TableRow
                android:paddingBottom="5dp">
                <TextView
                    android:id="@+id/idtxtCOV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtInformesCV"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:paddingBottom="5dp">
                <TextView></TextView>
                <Button
                    android:id="@+id/btnInformeCV"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btnInformeCA" />
            </TableRow>

            <TableRow
                android:layout_height="2px"
                android:background="#BDBDBD">
                <TextView
                    android:layout_span="2"
                    android:layout_height="1px"
                    android:layout_width="fill_parent"
                    android:text="">
                </TextView>
            </TableRow>

        </TableLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/text_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689" />


</androidx.constraintlayout.widget.ConstraintLayout>