<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".altaInformeCA.AltaInformeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginBottom="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">
            <TextView
                android:id="@+id/txtT0CHF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Seleccione su peso"
                android:layout_marginBottom="5dp"
                android:textSize="25sp" />

            <TableRow
                android:layout_height="2px"
                android:background="#BDBDBD">
                <TextView
                    android:layout_span="2"
                    android:layout_height="1px"
                    android:layout_width="fill_parent"
                    android:text="">
                </TextView>
            </TableRow>

            <TableRow
                android:paddingBottom="5dp">
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="20dp"/>
                <TextView
                    android:id="@+id/idTxtSeekbarPeso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="0dp"
                    android:text="@string/txt_pesoDefault"
                    android:textSize="25sp"/>

            </TableRow>

            <TableRow
                android:paddingTop="10dp"
                android:paddingBottom="5dp">
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="20dp"/>
                <SeekBar
                    android:id="@+id/idSeekbarPeso"
                    android:layout_width="140dp"
                    android:layout_height="35dp"
                    android:max="3000"
                    android:progress="700"
                    android:scaleX="2"
                    android:scaleY="2" />
            </TableRow>

            <TableRow
                android:layout_height="2px"
                android:background="#BDBDBD">
                <TextView
                    android:layout_span="2"
                    android:layout_height="1px"
                    android:layout_width="fill_parent"
                    android:text="">
                </TextView>
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_TensionArterial"
            android:textSize="25sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TableRow
                android:layout_height="2px"
                android:background="#BDBDBD">
                <TextView
                    android:layout_span="2"
                    android:layout_height="1px"
                    android:layout_width="fill_parent"
                    android:text="">
                </TextView>
            </TableRow>

            <TableRow
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="20dp"/>
                <TextView
                    android:id="@+id/idTxtSeekbarTSistolica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:text="@string/txt_tSistolica"
                    android:textSize="20sp" />
            </TableRow>

        </TableLayout>

        <SeekBar
            android:id="@+id/idSeekbarTSistolica"
            android:layout_width="140dp"
            android:layout_height="35dp"
            android:paddingStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="80dp"
            android:max="300"
            android:progress="120"
            android:scaleX="2"
            android:scaleY="2" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <TableRow
                android:layout_height="2px"
                android:background="#BDBDBD">
                <TextView
                    android:layout_span="2"
                    android:layout_height="1px"
                    android:layout_width="fill_parent"
                    android:text="">
                </TextView>
            </TableRow>
            <TableRow
                    android:paddingTop="10dp"
                    android:paddingBottom="5dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="20dp"/>
                    <TextView
                        android:id="@+id/idTxtSeekbarTDiastolica"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="80dp"
                        android:text="@string/txt_tDiastolica"
                        android:textSize="20sp" />
            </TableRow>
        </TableLayout>

        <SeekBar
            android:id="@+id/idSeekbarTDiastolica"
            android:layout_width="140dp"
            android:layout_height="35dp"
            android:paddingStart="30dp"

            android:max="300"
            android:layout_marginStart="80dp"
            android:progress="80"
            android:scaleX="2"
            android:scaleY="2" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TableRow
                android:layout_height="2px"
                android:background="#BDBDBD">
                <TextView
                    android:layout_span="2"
                    android:layout_height="1px"
                    android:layout_width="fill_parent"
                    android:text="">
                </TextView>
            </TableRow>

            <TableRow
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="20dp"/>
                <TextView
                    android:id="@+id/idTxtSeekbarTMedia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:text="@string/txt_tMedia"
                    android:textSize="20sp" />
            </TableRow>
        </TableLayout>
        <SeekBar
            android:id="@+id/idSeekbarTMedia"
            android:layout_width="140dp"
            android:layout_height="35dp"
            android:paddingStart="30dp"

            android:layout_marginStart="80dp"
            android:max="300"
            android:progress="80"
            android:scaleX="2"
            android:scaleY="2" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TableRow
                android:layout_height="2px"
                android:background="#BDBDBD">
                <TextView
                    android:layout_span="2"
                    android:layout_height="1px"
                    android:layout_width="fill_parent"
                    android:text="">
                </TextView>
            </TableRow>

        </TableLayout>
        <Button
            android:id="@+id/idBtnContAlta"
            android:layout_width="wrap_content"
            android:layout_marginStart="250dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:text="@string/btnContinuar"
            android:textSize="30sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>