<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".altaInformeCA.AltaInforme2Fragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginBottom="100dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/txtCabeceraCHF"
            android:textSize="25sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TableRow
                android:paddingBottom="5dp">
                <TextView
                    android:id="@+id/idTxtPeso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtPeso"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/idTxtPeso2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="50dp"
                    android:text="Valor"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_height="2px"
                android:background="#BDBDBD">
                <TextView
                    android:layout_span="2"
                    android:layout_height="1px"
                    android:layout_width="fill_parent"
                    android:text="">
                </TextView>
            </TableRow>

            <TableRow
                android:paddingTop="10dp"
                android:paddingBottom="5dp">
                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="Tensiones a mandar" />

            </TableRow>

            <TableRow
                android:layout_height="2px"
                android:background="#BDBDBD">
                <TextView
                    android:layout_span="2"
                    android:layout_height="1px"
                    android:layout_width="fill_parent"
                    android:text="">
                </TextView>
            </TableRow>

            <TableRow
                android:paddingTop="10dp"
                android:paddingBottom="5dp">
                <TextView
                    android:id="@+id/idTxtTSistolica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sistolica"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/idTxtTSistolica2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="50dp"
                    android:text="Valor"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_height="2px"
                android:background="#BDBDBD">
                <TextView
                    android:layout_span="2"
                    android:layout_height="1px"
                    android:layout_width="fill_parent"
                    android:text="">
                </TextView>
            </TableRow>

            <TableRow
                android:paddingTop="10dp"
                android:paddingBottom="5dp">
                <TextView
                    android:id="@+id/idTxtTDiastolica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Diastolica"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/idTxtTDiastolica2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="50dp"
                    android:text="Valor"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_height="2px"
                android:background="#BDBDBD">
                <TextView
                    android:layout_span="2"
                    android:layout_height="1px"
                    android:layout_width="fill_parent"
                    android:text="">
                </TextView>
            </TableRow>

            <TableRow
                android:paddingTop="10dp"
                android:paddingBottom="5dp">
                <TextView
                    android:id="@+id/idTxtTMedia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Media"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/idTxtTMedia2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="50dp"
                    android:text="Valor"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_height="2px"
                android:background="#BDBDBD">
                <TextView
                    android:layout_span="2"
                    android:layout_height="1px"
                    android:layout_width="fill_parent"
                    android:text="">
                </TextView>
            </TableRow>

            <TableRow
                android:paddingTop="10dp"
                android:paddingBottom="5dp">
                <TextView
                    android:id="@+id/idTxtFechaAlta"
                    android:layout_width="200dp"
                    android:layout_height="80dp"
                    android:text="@string/txtFechaAlta"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/idTxtFechaAlta2"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="50dp"
                    android:text="Valor"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_height="2px"
                android:background="#BDBDBD">
                <TextView
                    android:layout_span="2"
                    android:layout_height="1px"
                    android:layout_width="fill_parent"
                    android:text="">
                </TextView>
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/idBtnConfAltaCHF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btnMandar"
            android:layout_marginStart="260dp"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarAltaInf2"
        android:visibility="gone"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.456" />


</androidx.constraintlayout.widget.ConstraintLayout>